applying useReducer to app

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,8 @@
 //   },
 // }
 {
-  "extends": "@rocketseat/eslint-config/react"
+  "extends": "@rocketseat/eslint-config/react",
+  "rules": {
+    "no-unused-vars": "off"
+  }
 }
